--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,8 @@
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^2.17",
         "lexik/jwt-authentication-bundle": "^2.20",
+        "nelmio/cors-bundle": "^2.2",
+        "symfony/apache-pack": "^1.0",
         "symfony/console": "7.0.*",
         "symfony/dotenv": "7.0.*",
         "symfony/flex": "^2",
@@ -24,6 +26,7 @@
         "symfony/security-core": "7.0.*",
         "symfony/twig-bundle": "7.0.*",
         "symfony/validator": "7.0.*",
+        "symfony/web-link": "7.0.*",
         "symfony/yaml": "7.0.*"
     },
     "config": {
@@ -76,6 +79,7 @@
         }
     },
     "require-dev": {
-        "symfony/maker-bundle": "^1.52"
+        "symfony/maker-bundle": "^1.52",
+        "symfony/web-profiler-bundle": "^7.0"
     }
 }
