--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "symfony/runtime": "7.0.*",
         "symfony/security-bundle": "7.0.*",
         "symfony/security-core": "7.0.*",
+        "symfony/serializer": "7.0.*",
         "symfony/twig-bundle": "7.0.*",
         "symfony/validator": "7.0.*",
         "symfony/web-link": "7.0.*",
